# rs-stm32f1-hello-serial

./: Cargo.toml  README.md  debug.gdb  memory.x
.cargo/: config
src/: main.rs
