[package]
authors = ["Esa Varemo <esa@kuivanto.fi>"]
edition = "2018"
name = "stm32f1-hello"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.4"

nb = "1.0.0"
embedded-hal = "0.2.4"

[dependencies.stm32f1]
version = "0.12.1"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["rt", "stm32f103", "medium"]
